Fix artifacts in Hue sensor in colorsmudge brush

m_hsvTransform had been created before m_paintColor was converted
into the correct color space. It meant tha m_hsvTransform manipulated
pixels in a different colorspace (16i) instead of 16f or 32f :)

BUG:441755